--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.5.5",
     "@prisma/client": "^5.4.2",
     "@radix-ui/themes": "^2.0.0",
     "axios": "^1.5.1",
     "delay": "^6.0.0",
-    "next": "13.5.4",
+    "next": "^13.5.5",
+    "next-auth": "^4.24.3",
+    "openssl": "^2.0.0",
     "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
