--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "^13.5.5",
     "@prisma/client": "^5.4.2",
     "@radix-ui/themes": "^2.0.0",
