--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/bundle-analyzer": "^13.5.5",
     "@prisma/client": "^5.4.2",
     "@radix-ui/themes": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
     "delay": "^6.0.0",
     "next": "^13.5.5",
