--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "^13.5.5",
     "@prisma/client": "^5.4.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.5.1",
